# agents-office

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: CLAUDE.md
.npm-cache/_npx/5eaea19d7a9c45c7/: package-lock.json  package.json
canvas/partition/: CLAUDE.md
cli/: agents-office.mjs
context/: WORKING.md
docs/: CONTRIB.md  RUNBOOK.md
public/: CLAUDE.md
src/: App.tsx  CLAUDE.md  index.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: CLAUDE.md  default.json
src-tauri/icons/: CLAUDE.md  icon.icns
src-tauri/src/: CLAUDE.md  lib.rs  main.rs
src-tauri/src/commands/: CLAUDE.md  mod.rs
src-tauri/src/models/: CLAUDE.md  mod.rs
src-tauri/src/watcher/: CLAUDE.md  log_parser.rs  log_watcher.rs  mod.rs
src/components/office/: CLAUDE.md  OfficeCanvas.tsx  index.ts
src/components/office/canvas/: CLAUDE.md  constants.ts  layout.ts  math.ts  types.ts
src/components/office/canvas/agent/: AgentSprite.tsx  agentDrawing.ts  agentMood.ts  idleAnimations.ts
src/components/office/canvas/background/: OfficeBackground.tsx
src/components/ui/: CLAUDE.md  Header.tsx  Inbox.tsx  Timeline.tsx  index.ts
src/config/: colorScheme.ts  index.ts  toolMapping.ts
src/hooks/: CLAUDE.md  index.ts  useTauriEvents.ts
src/services/: CLAUDE.md  tauriCommands.ts
src/store/: CLAUDE.md  agentStore.ts  hudStore.ts  index.ts  logStore.ts  settingsStore.ts
src/types/: CLAUDE.md  index.ts
src/utils/: index.ts  messageUtils.ts  timelineUtils.ts
(+16 files in other folders)
