[package]
name = "agents-office"
version = "0.1.9"
description = "Claude Code visualization as agents working in an office"
authors = ["j-ho"]
edition = "2021"

[lib]
name = "agents_office_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.0"
notify-debouncer-full = "0.4"
tokio = { version = "1", features = ["full", "sync"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
